@@ -15,6 +15,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   c - fix a crash in the dynamic_string.c code (backported from 3.0.3)
   e - add a mom config option - $ext_pwd_retry - to specify # of retries on 
       checking for password validity. (backported from 3.0.3)
+  b - TRQ-608: Removed code to check for blocking mode in write_nonblocking_socket().
+      Fixes problem with interactive jobs (qsub -I) exiting prematurely.
 
 2.5.9
   e - change mom to only log "cannot find nvidia-smi in PATH" once when built
